--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <spring-boot-dependencies.version>3.2.2</spring-boot-dependencies.version>
         <spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
         <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
+        <sonar-maven-plugin.version>3.10.0.2594<sonar-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -67,6 +69,16 @@
                     </from>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar-maven-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+           </plugin>
         </plugins>
     </build>
 
