--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <spring-boot-dependencies.version>3.2.2</spring-boot-dependencies.version>
         <spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
         <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
-        <sonar-maven-plugin.version>3.10.0.2594<sonar-maven-plugin.version>
+        <sonar-maven-plugin.version>3.10.0.2594</sonar-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     </properties>
 
