--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
         <sonar-maven-plugin.version>3.10.0.2594</sonar-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +80,12 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
            </plugin>
+            <plugin>
+                <!-- to use Maven Junit test groups correctly -->
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-plugin</artifactId>
+                 <version>${maven-surefire-plugin.version}</version>
+            </plugin>
         </plugins>
     </build>
 
